fix overflow

--- a/src/components/home/complete.module.css
+++ b/src/components/home/complete.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     margin-left: 10%;
     width: 90%;
+    max-width: 100%; /* Ajusta según tus necesidades */
+    max-height: 100%;
     gap: 0;
     background-image: url("../../../public/img/fondosolo.png");
     background-attachment: fixed;
@@ -10,18 +12,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 1;
+    overflow: hidden;
 }
 
 .blob{
   z-index: 10;
 }
 
-.city{
-  display: flex;
-  position: fixed;
-  left: 0;
-  z-index: 0;
-}
 
 @media (max-width: 1266px) {
     .Home{
