--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -16,6 +16,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 .description{
   position: absolute;
@@ -74,6 +75,7 @@
   width: 100%;
   height: 100%;
   transition: transform 0.5s ease; 
+  overflow: hidden;
 }
 
 .planeta1 {
@@ -100,6 +102,14 @@
   right: 0; /* Mueve planeta6 hacia la derecha */
 }
 
+.planetas{
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .asteroidContainer {
   position: absolute;
   left: 0;
@@ -110,7 +120,10 @@
 }
 
 .asteroidContainer img {
+  position: relative;
   max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
   transition: transform 0.5s ease; /* Agrega una transición suave al efecto de zoom */
 }
 
